--- a/templates/base.html
+++ b/templates/base.html
@@ -62,17 +62,104 @@
                 <img src="/media/media/product_images/logo.png"
                     alt="Black outline of a Bratwurst with Get Wurst written on top to look like the text was done using a squirty bottle of sauce">
             </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                    {% if user.is_authenticated %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarAccountDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fa-solid fa-user"></i>
+                            My Account
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarAccountDropdownMenuLink">
+                            <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
+                            <li><a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a></li>
+                        </ul>
+                    </li>
+                    {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'products' %}">
+                            <i class="fa-solid fa-book-open"></i>
+                            Menu
+                        </a>
+                    </li>
+                    <li class="nav-item text-center">
+                        <a class="nav-link" href="{% url 'view_faq' %}">
+                            <i class="fa-solid fa-circle-question"></i>
+                            <abbr title="Frequently Asked Questions">FAQs</abbr>
+                        </a>
+                    </li>
+                    <li class="nav-item list-inline-item text-center">
+                        <a class="nav-link" href="{% url 'view_cart' %}">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                            Shopping Cart
+                            {% if total %}
+                            £{{ total|floatformat:2 }}
+                            {% else %}
+                            £0.00
+                            {% endif %}
+                        </a>
+                    </li>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </ul> 
+                <a class="navbar-btn btn primary-btn" href="#" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbarDark" aria-controls="offcanvasNavbarDark">
+                   LOGIN
+                </a>
+        </div>
+    </nav>
+
+    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbarDark"
+        aria-labelledby="offcanvasNavbarDarkLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasNavbarDarkLabel">Login or Register</h5>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+            </ul>
+            <form class="d-flex mt-3" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
+    </div>
+
+
+
+
+    <!-- <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url 'home' %}">
+                <img src="/media/media/product_images/logo.png"
+                    alt="Black outline of a Bratwurst with Get Wurst written on top to look like the text was done using a squirty bottle of sauce">
+            </a>
             <div class="row">
                 <button class="navbar-toggler" type="button" 
                     data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" 
+                    data-bs-target="#navbarSupportedContent" q
                     aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" 
                     id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-lg-0">
+                    <ul class="navbar-nav mb-lg-0">
                         <li class="nav-item">
                         {% if user.is_authenticated %}
                             <li class="nav-item dropdown">
@@ -152,12 +239,13 @@
                         </div> 
                         {% endif %}
                     </ul>
+                    
                     <form class="d-flex" method="GET" action="{% url 'products' %}">
                         <input class="form-control me-2 border border-4 rounded-pill border-dark"
                             type="search" placeholder="Search" aria-label="Search" name="q">
                         <button class="btn btn-outline-success" 
                             type="submit">Search</button>
-                    </form>
+                    </form> 
                 </div>
                 <div class="row text-center">
                     <ul class="navbar-nav float-none float-md-end">
@@ -176,39 +264,9 @@
                     </ul>
                 </div>
             </div>
-    </nav>
+    </nav>   -->
 
-    <nav class="navbar navbar-dark bg-dark" aria-label="Dark offcanvas navbar">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Dark offcanvas navbar</a>
-            <button type="button" class="btn primary-btn" data-bs-toggle="offcanvas"
-                data-bs-target="#offcanvasNavbarDark" aria-controls="offcanvasNavbarDark">
-                Login
-            </button>
-            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbarDark"
-                aria-labelledby="offcanvasNavbarDarkLabel">
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasNavbarDarkLabel">Offcanvas</h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-                        aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex mt-3" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </nav>
+
 
     {% if messages %}
     <div class="message-container">
