--- a/templates/base copy.html
+++ b/templates/base copy.html
@@ -56,55 +56,23 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light text-center">
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container-fluid d-flex">
-            <a class="navbar-brand" href="{% url 'home' %}">
-                <img src="/media/media/product_images/logo.png"
-                    alt="Black outline of a Bratwurst with Get Wurst written on top to look like the text was done using a squirty bottle of sauce">
-            </a>
+            <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mb-2 mb-lg-0 w-100">
-                    {% if user.is_authenticated %}
-                        <li class="nav-item order-md-2 ms-md-auto">
-                            <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
-                        </li>
-                        {% if user.is_superuser %}
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Product Management
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="{% url 'products' %}">Update or Delete Product</a>
-                                </li>
-                                <li>
-                                </li>
-                                <li><a class="dropdown-item" href="{% url 'add_product' %}">Add Product</a></li>
-                            </ul>
-                        </li>
-                            <!-- <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                                <li><a class="dropdown-item" href="{% url 'add_product' %}">
-                                        Add Product
-                                    </a></li>
-                                <li><a class="dropdown-item" href="#">
-                                        Edit Product
-                                    </a></li>
-                            </ul> -->
-                        {% endif %}
-
-                        {% else %}
-                            <li class="nav-item order-md-1 ms-md-auto">
-                                <a class="nav-link" href="{% url 'account_login' %}">Login</a>
-                            </li>
-                            <li class="nav-item order-md-2">
-                                <a class="nav-link" href="{% url 'account_signup' %}">Signup</a>
-                            </li>
-                    {% endif %}
+                <ul class="navbar-nav mb-2 mb-lg-0 w-100 text-sm-center">
+                    <li class="nav-item order-md-1 ms-sm-auto">
+                        <a class="nav-link" href="#">Login</a>
+                    </li>
+                    <li class="nav-item order-md-2">
+                        <a class="nav-link" href="#">Register</a>
+                    </li>
+                <!-- </ul> -->
                     <hr>
                     <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -122,29 +90,12 @@
                     </li> -->
                 <!-- <ul class="navbar-nav mb-2 mb-lg-0 d-flex"> -->
                     
-                     <li class="nav-item ms-md-auto"> 
-                         <a class="nav-link" href="{% url 'products' %}">
-                            <i class="fa-solid fa-book-open"></i>
-                            Menu
-                        </a>
+                     <li class="nav-item ms-auto">
+                         <a class="nav-link" href="#">Menu</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="{% url 'view_faq' %}">
-                            <i class="fa-solid fa-circle-question"></i>
-                            <abbr title="Frequently Asked Questions">FAQs</abbr>
-                        </a>
+                         <a class="nav-link" href="#">FAQs</a>
                      </li>
-                      <li class="nav-item list-inline-item text-center">
-                          <a class="nav-link" href="{% url 'view_cart' %}">
-                              <i class="fa-solid fa-basket-shopping"></i>
-                              Cart
-                              {% if total %}
-                              £{{ total|floatformat:2 }}
-                              {% else %}
-                              £0.00
-                              {% endif %}
-                          </a>
-                      </li>
                      <form class="d-flex">
                          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                          <button class="btn btn-outline-success" type="submit">Search</button>
