--- a/templates/base.html
+++ b/templates/base.html
@@ -77,6 +77,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fa-solid fa-clipboard-list"></i>
                                 Product Management
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -145,6 +146,12 @@
                               {% endif %}
                           </a>
                       </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'profile' %}">
+                            <i class="fa-solid fa-user"></i>
+                            My Profile
+                        </a>
+                    </li>
                      <form class="d-flex">
                          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                          <button class="btn btn-outline-success" type="submit">Search</button>
