--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light text-center">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light text-center">
         <div class="container-fluid d-flex">
             <a class="navbar-brand" href="{% url 'home' %}">
                 <img src="/media/media/product_images/logo.png"
