--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -72,7 +72,7 @@
 <section class="hero-image">
     <div class="px-4 py-5 text-center">
         <div class="text-center p-3 d-none d-md-block">
-            <img src="/media/media/product_images/logo.png" height="120" alt="Company Logo">
+            <img src="/media/logo.png" height="120" alt="Company Logo">
         </div>
         <!-- <h1 class="display-1 fw-bolder">Get Wurst</h1> -->
         <div class="col-lg-6 mx-auto white-text">
