--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
                 
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100 text-center">
                     
                     {% if user.is_superuser %}
                     <li class="nav-item dropdown">
@@ -91,11 +91,11 @@
                     </li>
                     {% endif %}
                     {% if user.is_authenticated %}
-                    <li class="nav-item order-lg-1 ms-auto">
+                    <li class="nav-item order-lg-1 ms-lg-auto">
                         <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
                     </li>
                     {% else %}
-                    <li class="nav-item order-lg-1 ms-auto">
+                    <li class="nav-item order-lg-1 ms-lg-auto">
                         <a class="nav-link" href="{% url 'account_signup' %}">Signup</a>
                     </li>
                     <li class="nav-item order-lg-2">
@@ -135,11 +135,81 @@
                         </a>
                     </li>
                     {% endif %}
+                    <!-- <form class="d-flex" role="search" method="GET" action="{% url 'products' %}">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+                            name="q">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form> -->
                 </ul>
-                <form class="d-flex" role="search" method="GET" action="{% url 'products' %}">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+            </div>
+        </div>
+    </nav>
+
+    <nav class="navbar navbar-expand bg-light">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 w-100 justify-content-center flex-wrap">
+
+                    <!-- {% if user.is_superuser %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fa-solid fa-clipboard-list"></i>
+                            Product Management
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li>
+                                <a class="dropdown-item text-center" href="{% url 'products' %}">Update or Delete
+                                    Product</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item text-center" href="{% url 'add_product' %}">Add Product</a>
+                            </li>
+                        </ul>
+                    </li>
+                    {% endif %} -->
+                    <hr>
+
+                    <!-- {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'profile' %}">
+                            <i class="fa-solid fa-user"></i>
+                            My Profile
+                        </a>
+                    </li>
+                    {% endif %} -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'products' %}">
+                            <i class="fa-solid fa-book-open"></i>
+                            Bratwurt
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'products' %}">
+                            <i class="fa-solid fa-book-open"></i>
+                            Currywurst
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'products' %}">
+                            <i class="fa-solid fa-book-open"></i>
+                            Schnitzel
+                        </a>
+                    </li>
+                    
+                    <form class="d-flex" role="search" method="GET" action="{% url 'products' %}">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+                            name="q">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </ul>
             </div>
         </div>
     </nav>
