Add hrefs to second nav links

--- a/templates/base.html
+++ b/templates/base.html
@@ -186,19 +186,19 @@
                     </li>
                     {% endif %} -->
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'products' %}">
+                        <a class="nav-link" href="{% url 'products' %}?category=Bratwurst">
                             <i class="fa-solid fa-book-open"></i>
                             Bratwurt
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'products' %}">
+                        <a class="nav-link" href="{% url 'products' %}?category=Currywurst">
                             <i class="fa-solid fa-book-open"></i>
                             Currywurst
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'products' %}">
+                        <a class="nav-link" href="{% url 'products' %}?category=Schnitzel">
                             <i class="fa-solid fa-book-open"></i>
                             Schnitzel
                         </a>
