--- a/templates/base.html
+++ b/templates/base.html
@@ -56,126 +56,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}">
-                <img src="/media/logo.png"
-                    alt="Black outline of a Bratwurst with Get Wurst written on top to look like the text was done using a squirty bottle of sauce">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-                
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100 text-center">
-                    
-                    {% if user.is_superuser %}
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fa-solid fa-clipboard-list"></i>
-                            Product Management
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li>
-                                <a class="dropdown-item text-center" href="{% url 'products' %}">Update or Delete
-                                    Product</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item text-center" href="{% url 'add_product' %}">Add Product</a>
-                            </li>
-                        </ul>
-                    </li>
-                    {% endif %}
-                    {% if user.is_authenticated %}
-                    <li class="nav-item order-lg-1 ms-lg-auto">
-                        <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
-                    </li>
-                    {% else %}
-                    <li class="nav-item order-lg-1 ms-lg-auto">
-                        <a class="nav-link" href="{% url 'account_signup' %}">Signup</a>
-                    </li>
-                    <li class="nav-item order-lg-2">
-                        <a class="nav-link" href="{% url 'account_login' %}">Login</a>
-                    </li>
-
-                    {% endif %}
-                    <hr>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'products' %}">
-                            <i class="fa-solid fa-book-open"></i>
-                            Menu
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'view_faq' %}">
-                            <i class="fa-solid fa-circle-question"></i>
-                            <abbr title="Frequently Asked Questions">FAQs</abbr>
-                        </a>
-                    </li>
-                    <li class="nav-item list-inline-item">
-                        <a class="nav-link" href="{% url 'view_cart' %}">
-                            <i class="fa-solid fa-basket-shopping"></i>
-                            Cart
-                            {% if total %}
-                            £{{ total|floatformat:2 }}
-                            {% else %}
-                            £0.00
-                            {% endif %}
-                        </a>
-                    </li>
-                    {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'profile' %}">
-                            <i class="fa-solid fa-user"></i>
-                            My Profile
-                        </a>
-                    </li>
-                    {% endif %}
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <nav class="navbar navbar-expand bg-light">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 w-100 justify-content-center flex-wrap">
-                    <hr>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'products' %}?category=Bratwurst">
-                            Bratwurt
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'products' %}?category=Currywurst">
-                            Currywurst
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'products' %}?category=Schnitzel">
-                            Schnitzel
-                        </a>
-                    </li>
-                    
-                    <form class="d-flex" role="search" method="GET" action="{% url 'products' %}">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
-                            name="q">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
+    {% include 'includes/main-nav.html' %}
+    {% include 'includes/cat-nav.html' %}
+    
     {% if messages %}
     <div class="message-container">
         {% for message in messages %}
@@ -218,3 +101,6 @@
 </body>
 
 </html>
+
+
+
