--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -69,28 +69,43 @@
 {% endblock %}
 
 {% block content %}
-<section class="hero-image">
+<!-- <section class="hero-image">
     <div class="px-4 py-5 text-center">
         <div class="text-center p-3 d-none d-md-block">
             <img src="/media/logo.png" height="120" alt="Company Logo">
         </div>
-        <!-- <h1 class="display-1 fw-bolder">Get Wurst</h1> -->
+        <h1 class="display-1 fw-bolder">Get Wurst</h1>
         <div class="col-lg-6 mx-auto white-text">
             <h2 class="display-5 fw-bold">Proper Currywurst.</h1>
             <h2 class="display-5 fw-bold">Banging Bratwurst.</h1>
             <h2 class="display-5 fw-bold">Serious Schnitzels.</h1>
-            <!-- <p class="lead mb-4">Banging Bratwurst.</p>
-            <p class="lead mb-4">Serious Schnitzels.</p> -->
-              <!-- <p class="lead mb-4">
+            <p class="lead mb-4">Banging Bratwurst.</p>
+            <p class="lead mb-4">Serious Schnitzels.</p>
+              <p class="lead mb-4">
                   <p>Proper Currywurst.</p>
                 <p>Banging Bratwurst.</p>
-                <p>Serious Schnitzels.</p> -->
+                <p>Serious Schnitzels.</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <button type="button" class="btn primary-btn btn-lg px-4 gap-3">Primary button</button>
                 <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
             </div>
         </div>
     </div>
+</section> -->
+
+<section class="hero">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 border">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus ratione doloremque ipsum, quasi hic sit totam. Velit, in nisi! Sint quibusdam officia rem magnam nisi aut et facere at quisquam porro veniam omnis maiores nemo natus odio eius beatae explicabo, quis autem provident eum adipisci error aliquam optio! Obcaecati, dolorem.
+            </div>
+            <div class="col-md-6 border">
+                <img src="media/hero.jpg" alt="">
+            </div>
+            <!-- add CTA button -->
+        </div>
+    </div>
+
 </section>
 
 <h1>HEADING</h1>
