Move hero image partially off screen

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -95,17 +95,19 @@
 
 <section class="hero">
     <div class="container">
-        <div class="row">
+        <div class="row align-items-center">
             <div class="col-md-6 border">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus ratione doloremque ipsum, quasi hic sit totam. Velit, in nisi! Sint quibusdam officia rem magnam nisi aut et facere at quisquam porro veniam omnis maiores nemo natus odio eius beatae explicabo, quis autem provident eum adipisci error aliquam optio! Obcaecati, dolorem.
+                <h1 class="display-5">Proper Currywurst.</h1>
+                <h1 class="display-5">Banging Bratwurst.</h1>
+                <h1 class="display-5">Serious Schnitzels.</h1>
             </div>
-            <div class="col-md-6 border">
-                <img src="media/hero.jpg" alt="">
+            <div class="col-md-6 border ms-auto overflow-hidden">
+                <img src="media/hot-dog-crop.png" alt="" width="1000" height="390"
+                    class="float-end hero-img">
             </div>
             <!-- add CTA button -->
         </div>
     </div>
-
 </section>
 
 <h1>HEADING</h1>
