--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -96,19 +96,20 @@
 <section class="hero">
     <div class="container">
         <div class="row align-items-center">
-            <div class="col-md-6 border">
+            <div class="col-md-6">
                 <h1 class="display-5">Proper Currywurst.</h1>
                 <h1 class="display-5">Banging Bratwurst.</h1>
                 <h1 class="display-5">Serious Schnitzels.</h1>
             </div>
-            <div class="col-md-6 border ms-auto overflow-hidden">
-                <img src="media/hot-dog-crop.png" alt="" width="1000" height="390"
-                    class="float-end hero-img">
+            <div class="col-md-6 overflow-visible">
+                <img src="media/hero.jpg" alt="">
             </div>
             <!-- add CTA button -->
         </div>
     </div>
 </section>
+
+
 
 <h1>HEADING</h1>
 
