--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -96,13 +96,14 @@
 <section class="hero">
     <div class="container">
         <div class="row align-items-center">
-            <div class="col-md-6">
+            <div class="col-sm-3 border">
                 <h1 class="display-5">Proper Currywurst.</h1>
                 <h1 class="display-5">Banging Bratwurst.</h1>
                 <h1 class="display-5">Serious Schnitzels.</h1>
             </div>
-            <div class="col-md-6 overflow-visible">
-                <img src="media/hero.jpg" alt="">
+            <div class="col-sm-9 border">
+                <div class="hero-img"> dsds</div>
+                <!-- <img src="media/hero-burger.png" alt=""> -->
             </div>
             <!-- add CTA button -->
         </div>
