Move hero img partially off screen

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -95,16 +95,14 @@
 
 <section class="hero">
     <div class="container">
-        <div class="row align-items-center">
-            <div class="col-sm-3 border">
-                <h1 class="display-5">Proper Currywurst.</h1>
-                <h1 class="display-5">Banging Bratwurst.</h1>
-                <h1 class="display-5">Serious Schnitzels.</h1>
+        <div class="row hero-img">
+            <div class="border">
+                    <h1 class="display-5">Proper Currywurst.</h1>
+                    <h1 class="display-5">Banging Bratwurst.</h1>
+                    <h1 class="display-5">Serious Schnitzels.</h1>
             </div>
-            <div class="col-sm-9 border">
-                <div class="hero-img"> dsds</div>
-                <!-- <img src="media/hero-burger.png" alt=""> -->
-            </div>
+            <!-- <div class="col-sm-9 border hero-img">
+            </div> -->
             <!-- add CTA button -->
         </div>
     </div>
