Change hero img back to img

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -93,23 +93,49 @@
     </div>
 </section> -->
 
-<section class="hero">
-    <div class="container">
-        <div class="row hero-img">
-            <div class="border">
-                    <h1 class="display-5">Proper Currywurst.</h1>
-                    <h1 class="display-5">Banging Bratwurst.</h1>
-                    <h1 class="display-5">Serious Schnitzels.</h1>
+<!-- <section class="hero">
+            <div class="hero-img border d-flex align-items-center">
+                <h1 class="ms-3 display-6">Banging BRATWURST. <br>Proper CURRYWURST. <br> BURGERS.</h5>
+                <div>
+                    <h4>
+                        <a class="btn btn-primary" href="#" role="button">Link</a>
+                    </h4>                   
             </div>
-            <!-- <div class="col-sm-9 border hero-img">
-            </div> -->
-            <!-- add CTA button -->
+</section> -->
+
+<!-- <div class="container">
+    <div class="row">
+        <div class="border hero-img d-flex align-items-center">
+            <h1 class="align-items-center">BRATTS. CURRY. BURGER</h1>
+            <div class="my-3">
+                <h4>
+                    <a class="btn btn-primary" href="#" role="button">Link</a>
+                </h4>
+            </div>
         </div>
     </div>
-</section>
 
+</div> -->
 
-
+<div class="container">
+    <div class="row hero align-items-center">
+        <div class="col-11 border">
+            <h1>BANGING BRATWURSTS.</h1>
+            <h1>BANGING BRATTS.</h1>
+            <h1>And now.......<br>BURGERS.</h1>
+            <div class="my-3">
+                <h4>
+                    <a class="btn btn-primary" href="#" role="button">CTA</a>
+                </h4>
+            </div>
+        </div>
+        <div class="col-1 border">
+            <img src="media/hero-burger.png" class="hero-img" alt="">
+        </div>
+        
+    </div>
+    
+</div>
 <h1>HEADING</h1>
 
 
