--- a/static/css/base.css
+++ b/static/css/base.css
@@ -14,10 +14,12 @@ abbr {
 }
 
 body {
-    background-color: #D19A11;
+    /* background-color: #D19A11; */
     font-family: 'PT Sans', sans-serif;
     /* font-size: 5em; */
 }
+
+
 
 /* #hero-img-container {
   background-image: url('media/hero.jpg');
@@ -223,24 +225,35 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Paytone One', sans-serif;
 }
 
+.hero {
+  height: 60vh
+}
 .hero-img {
   /* transform:translateX(50%); */
-  background-image: url("/media/hero-burger.png");
-  height:50vh;
-  background-size: 100%;
-  background-repeat: no-repeat;
-  background-position: 60vw;
+  /* background-image: url("/media/hero-burger.png"); */
+  /* height:25vh; */
+  /* background-position: 70vw 0vw;  */
+  /* background-size: 100%;  */
+  /* background-repeat: no-repeat;  */
+  /* min-height: 100%; */
+  /* max-width:100%; */
+  height:60vh;
+  transform: translateX(-25%);
+}
+
+.hero-highlight {
+  color: red;
 }
 
 
-.white-text {
+/* .white-text {
   color: white;
-}
+} */
 
 /* Adapted from https://getcssscan.com/css-buttons-examples */
 
 
-.primary-btn {
+/* .primary-btn {
   background-color: #fbeee0;
   border: 2px solid #422800;
   border-radius: 30px;
@@ -273,4 +286,4 @@ h1, h2, h3, h4, h5, h6 {
     min-width: 120px;
     padding: 0 25px;
   }
-}
+} */
