--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -74,10 +74,10 @@
     <div class="row">
         {% for product in products %}
         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
-            <div class="card h-100">
-                <img src="{{ product.image.url }}" class="card-img-top" 
+            <div class="card h-100 rounded-0">
+                <img src="{{ product.image.url }}" class="card-img-top rounded-0"
                 alt="{{ product.name }}">
-                <div class=" card-body">
+                <div class="card-body">
                     <h5 class="card-title">{{ product.name }}</h5>
                     <p class="card-text">{{ product.short_description }}</p>
                 </div>
