Change nav container to container

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,5 +1,5 @@
  <nav class="navbar navbar-expand-lg bg-light w-100">
-     <div class="container-fluid">
+     <div class="container">
          <a class="navbar-brand" href="{% url 'home' %}">
              <img src="/media/logo.png"
                  alt="Black outline of a Bratwurst with Get Wurst written on top to look like the text was done using a squirty bottle of sauce">
