--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -117,25 +117,24 @@
 
 </div> -->
 
-<div class="container">
+<section class="container my-3">
     <div class="row hero align-items-center">
         <div class="col-11 border">
-            <h1>BANGING BRATWURSTS.</h1>
-            <h1>BANGING BRATTS.</h1>
-            <h1>And now.......<br>BURGERS.</h1>
+            <h1 class="py-3">Banging BRATWURSTS.</h1>
+            <h1 class="py-3">Proper CURRYWURST.</h1>
+            <h1 class="py-3">And now.......<br>BURGERS.</h1>
             <div class="my-3">
                 <h4>
                     <a class="btn btn-primary" href="#" role="button">CTA</a>
+                    <a class="btn btn-secondary" href="#" role="button">CTA</a>
                 </h4>
             </div>
         </div>
         <div class="col-1 border">
             <img src="media/hero-burger.png" class="hero-img" alt="">
-        </div>
-        
-    </div>
-    
-</div>
+        </div>   
+    </div> 
+</section>
 <h1>HEADING</h1>
 
 
