--- a/events/templates/events/all.html
+++ b/events/templates/events/all.html
@@ -4,8 +4,8 @@
 {% block content %}
 
 {% for event in events %}
-    {{ event.name }}
-    {{ event.image }}
-    {{ event.link }}
+    <img src="{{ event.image.url }}" alt="{{ event.name }}">
+    <a href="{{ event.link }}">{{ event.name }}</a>
 {% endfor %}
+
 {% endblock %}
