--- a/events/templates/events/all.html
+++ b/events/templates/events/all.html
@@ -4,6 +4,7 @@
 {% block content %}
 
 {% for event in events %}
+    {{ event.name }}
     <img src="{{ event.image.url }}" alt="{{ event.name }}">
     <a href="{{ event.link }}">{{ event.name }}</a>
 {% endfor %}
