--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -57,6 +57,12 @@
                          <abbr title="Frequently Asked Questions">FAQs</abbr>
                      </a>
                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">
+                        <i class="fa-solid fa-cake-candles"></i>
+                        Events
+                      </a>
+                  </li>
                  <li class="nav-item list-inline-item">
                      <a class="nav-link" href="{% url 'view_cart' %}">
                          <i class="fa-solid fa-basket-shopping"></i>
