--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -58,7 +58,7 @@
                      </a>
                  </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#">
+                      <a class="nav-link" href="{% url 'events_all' %}">
                         <i class="fa-solid fa-cake-candles"></i>
                         Events
                       </a>
