Add definitie sizing to menu-img

--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -75,7 +75,7 @@
         {% for product in products %}
         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
             <div class="card">
-                <img src="{{ product.image.url }}" class="card-img-top"
+                <img src="{{ product.image.url }}" class="menu-img"
                 alt="{{ product.name }}">
                 <div class="card-body">
                     <h5 class="card-title">{{ product.name }}</h5>
