--- a/static/css/base.css
+++ b/static/css/base.css
@@ -19,15 +19,11 @@ body {
     /* font-size: 5em; */
 }
 
-.card {
-  border: 2px solid black;
-  border-radius: 0;
+.menu-img {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
 }
-
-.card > img {
-  border-radius: 0;
-}
-
 /* #hero-img-container {
   background-image: url('media/hero.jpg');
   
