Rename navbar ids

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -4,11 +4,11 @@
              <img src="/media/logo.png"
                  alt="Black outline of a Bratwurst with Get Wurst written on top to look like the text was done using a squirty bottle of sauce">
          </a>
-         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavContent"
+             aria-controls="mainNavContent" aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>
          </button>
-         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+         <div class="collapse navbar-collapse" id="mainNavContent">
              <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100 text-center">
                  {% if user.is_superuser %}
                  <li class="nav-item dropdown">
