--- a/templates/includes/cat-nav.html
+++ b/templates/includes/cat-nav.html
@@ -1,30 +1,28 @@
  <nav class="navbar navbar-expand bg-light">
-    <div class="container-fluid">
-        <div class="collapse navbar-collapse" id="catNavContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 w-100 justify-content-center flex-wrap">
-                <hr>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'products' %}?category=Bratwurst">
-                        Bratwurt
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'products' %}?category=Currywurst">
-                        Currywurst
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'products' %}?category=Schnitzel">
-                        Schnitzel
-                    </a>
-                </li>
-                
-                <form class="d-flex" role="search" method="GET" action="{% url 'products' %}">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
-                        name="q">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-            </ul>
-        </div>
-    </div>
-</nav>
+     <div class="container-fluid">
+         <div class="collapse navbar-collapse" id="catNavContent">
+             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 w-100 
+                        justify-content-center flex-wrap">
+                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'products' %}?category=Bratwurst">Bratwurst</a>
+                 </li>
+                 <li class="nav-item">
+                     <a class="nav-link" href="{% url 'products' %}?category=Currywurst"> Currywurst </a>
+                 </li>
+                 <li class="nav-item">
+                     <a class="nav-link" href="{% url 'products' %}?category=Schnitzel"> Schnitzel </a>
+                 </li>
+                 <li>
+                     <form class="d-flex" role="search" method="GET" action="{% url 'products' %}">
+                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+                             name="q">
+                         <button class="btn btn-outline-success" type="submit">Search</button>
+                     </form>
+                 </li>
+             </ul>
+         </div>
+     </div>
+ </nav>
+
+
+ 
