--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -12,8 +12,7 @@
              <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100 text-center">
                  {% if user.is_superuser %}
                  <li class="nav-item dropdown">
-                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                         data-bs-toggle="dropdown" aria-expanded="false">
+                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                          <i class="fa-solid fa-clipboard-list"></i>
                          Product Management
                      </a>
