Remove all type='text/javascript' declerations

--- a/products/templates/products/includes/quantity_input_script.html
+++ b/products/templates/products/includes/quantity_input_script.html
@@ -1,6 +1,6 @@
 <!-- below taken from code institute boutique ado walkthrough -->
 
-<script type="text/javascript">
+<script>
     // Disable +/- buttons outside 1-15 range
     function handleEnableDisable(itemId) {
         var currentValue = parseInt($(`#id_qty_${itemId}`).val());
