Static css test

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -14,7 +14,7 @@ abbr {
 }
 
 body {
-    background-color: #D19A11;
+    background-color: red;
     font-family: 'PT Sans', sans-serif;
     /* font-size: 5em; */
 }
