Change hero-burger link back to original

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -86,7 +86,7 @@
             </div>
         </div>
         <div class="col-1 border">
-            <img src="{{ MEDIA_URL }}/media/hero-burger.png" class="hero-img" alt="">
+            <img src="{{ MEDIA_URL }}hero-burger.png" class="hero-img" alt="">
         </div>
     </div>
 </section>
