Correct hero-img src

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -27,8 +27,7 @@
 <!-- Set it to noindex, nofollow for 'thin' pages (pages that don't have much information), where you don't want Google or
     Bing to judge your site based on that content -->
 
-
-
+<title>SITE TITLE</title>
 <!-- This is what will display in the tab at the top of a user's browser window -->
 <!-- Title should be less than 60 characters -->
 <!-- Unique title on every page, don't repeat yourself -->
@@ -37,19 +36,19 @@
 
 <!-- Social media integration, for when people share your content -->
 <!-- Facebook, LinkedIn, Google -->
-<meta property="og:type" content="article">
-<meta property="og:title" content="TITLE OF YOUR POST OR PAGE"> <!-- Same as what's inside <title> tag -->
+<meta property="og:type" content="article" />
+<meta property="og:title" content="TITLE OF YOUR POST OR PAGE" /> <!-- Same as what's inside <title> tag -->
 <!-- The title you want displayed when your page is linked to -->
-<meta property="og:description" content="DESCRIPTION OF PAGE CONTENT">
+<meta property="og:description" content="DESCRIPTION OF PAGE CONTENT" />
 <!-- Same as what's inside description meta tag -->
 <!-- The description you want displayed when your page is linked to (maximum 300 characters) -->
-<meta name="image" property="og:image" content="URL TO IMAGE">
+<meta name="image" property="og:image" content="URL TO IMAGE" />
 <!-- URL of image to be displayed when your site is linked to -->
 <!-- Be careful when building non-static sites like your MS3 and MS4, this can be a little tricky -->
-<meta property="og:image:alt" content="ALT TEXT FOR IMAGE">
+<meta property="og:image:alt" content="ALT TEXT FOR IMAGE" />
 <!-- Alt text for above image - an accessibility win -->
-<meta property="og:url" content="#"> <!-- Your page's URL -->
-<meta property="og:site_name" content="SITE NAME"> <!-- Same as what's inside <title> tag -->
+<meta property="og:url" content="#" /> <!-- Your page's URL -->
+<meta property="og:site_name" content="SITE NAME" /> <!-- Same as what's inside <title> tag -->
 <meta name="author" content="AUTHOR NAME HERE"> <!-- Your name -->
 
 <!-- Twitter -->
@@ -69,15 +68,13 @@
 <meta name="twitter:creator" content="@USERNAME"> <!-- Your personal Twitter handle -->
 {% endblock %}
 
-{% block extra_title %}Index{% endblock %}
-
 {% block content %}
 <section class="container my-3">
     <div class="row hero align-items-center">
         <div class="col-11 border">
             <h1 class="py-3">Banging BRATWURSTS.</h1>
             <h1 class="py-3">Proper CURRYWURST.</h1>
-            <h1 class="py-3">And now....... <br>BURGERS. </h1>
+            <h1 class="py-3">And now.......<br>BURGERS.</h1>
             <div class="my-3">
                 <h4>
                     <a class="btn btn-primary" href="#" role="button">CTA</a>
@@ -86,9 +83,9 @@
             </div>
         </div>
         <div class="col-1 border">
-            <img src="{{ MEDIA_URL }}/product_images/product.png" class="hero-img" alt="">
-        </div>
-    </div>
+            <img src="media/hero-burger.png" class="hero-img" alt="">
+        </div>   
+    </div> 
 </section>
 <h1>HEADING</h1>
 
