Add hero img alt value in home/index template

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -83,7 +83,7 @@
             </div>
         </div>
         <div class="col-1 border">
-            <img src="media/hero-burger.png" class="hero-img" alt="">
+            <img src="media/hero-burger.png" class="hero-img" alt="A delicous looking double cheese burger">
         </div>   
     </div> 
 </section>
